unpackaged/main/default/objects/Implementation_Open_Snapshot__c/Implementation_Open_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Implementation Open Snapshot</label>
    <nameField>
        <label>Implementation Open Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Open Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>