unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Account_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Employee_Count__c</fullName>
    <label>Account Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>