unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <label>Account Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>