unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Activation_Date_Set_Method__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Set_Method__c</fullName>
    <label>Activation Date Set Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>