unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Activation_Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Escalation_Status__c</fullName>
    <label>Activation Escalation Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>