unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Activation_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Activation_Pacing__c</fullName>
    <label>Activation Pacing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>