unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Activation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Activation_Risk__c</fullName>
    <label>Activation Risk</label>
    <length>80</length>
    <type>Text</type>
</CustomField>