unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Customer_Activation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Activation_Deadline__c</fullName>
    <label>Customer Activation Deadline</label>
    <type>Date</type>
</CustomField>