unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Customer_POV__c.field-meta.xml
<CustomField>
    <fullName>Customer_POV__c</fullName>
    <label>Customer POV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>