unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier__c</fullName>
    <label>Customer Success Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>