unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activation__c</fullName>
    <label>Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>