unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Implementation Open Snapshots</relationshipLabel>
    <relationshipName>Implementation_Open_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>