unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Mode_Set_Method__c.field-meta.xml
<CustomField>
    <fullName>Mode_Set_Method__c</fullName>
    <label>Mode Set Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>