unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Next_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Snapshot_Date__c</fullName>
    <formula>Snapshot_Date__c+7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Snapshot Date</label>
    <type>Date</type>
</CustomField>