unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Onboarding_Health__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Health__c</fullName>
    <label>Onboarding Health</label>
    <length>80</length>
    <type>Text</type>
</CustomField>