unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <label>Owner Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>