unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>