unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <label>Owner Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>