unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam__c</fullName>
    <label>Owner Subteam</label>
    <length>80</length>
    <type>Text</type>
</CustomField>