unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <label>Owner Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>