unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territory__c</fullName>
    <label>Owner Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>