unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <label>Platform Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>