unpackaged/main/default/objects/Implementation_Open_Snapshot__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>